2012-04-08 Stanislas Rolland  <typo3@sjbr.ca>
	* Add feature #28370: replyTo feature for mails sent to user
	* Add feature #6168 (old bug tracker): Support itemsProcFunc property of TCA select and radio fields (Thanks to Jeff Segars)
	* Fix bug #12795 (old bug tracker): Default setup damages valid e-mail adresses
	* Fix bug #13765 (old bug tracker): Attachment file is attached to the administrative review email
	* Follow-up 8 to feature #34447: Add ###LABEL_NEW_PASSWORD### on ###TEMPLATE_EDIT###
	* Fix bug #35786: JavaScript files are not versioned
	* Fix bug #16658 (old bug tracker): amp htmlspecialchars_decode doesn't work in 2.6.1
	* Fix bug #14739 (old bug tracker): htmlspecialchars_decode doesn't work

2012-04-07 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up 7 to feature #34447: ###HIDDENFIELDS### not always replaced

2012-04-06 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up to bug #27521: Deleting images in EDIT mode leads to broken references
	* Follow-up 6 to feature #34447: Add getters for transmission security and storage security

2012-04-05 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up 5 to feature #34447: Move transmission security to own class
	* Cleanup: Initialize the command key
	* Follow-up 2 to feature #34405: Allow old mailer API for TYPO3 4.5-4.6
	* Fix bug #35730: enableEmailOnDelete not honoured
	* Fix bug #35732: Error due to username being required in edit mode	

2012-04-04 Stanislas Rolland  <typo3@sjbr.ca>
	* Follow-up to cleanup #35292: Cleanup in ext_tables.php
	* Follow-up 3 to feature #34447: Add support for saltedpasswords and rsaauth
	* Follow-up 4 to feature #34447: Move storage security to own class

2012-04-03 Stanislas Rolland  <typo3@sjbr.ca>
	* Add feature #27504: Add userGroupsPidList TS constant and TS setup property (Thanks to Georg Schönweger).

2012-03-29 Stanislas Rolland  <typo3@sjbr.ca>
	* Fix bug #14271 (old bug tracker): Password constant not respected 

2012-03-28 Stanislas Rolland  <typo3@sjbr.ca>