@@ -184,7 +184,7 @@ plugin.tx_srfeuserregister_pi1 {
     # cat=plugin.tx_srfeuserregister_pi1/enable; type=string; label= Allowed user subgroups: Comma separated list of subgroups from which all user groups shall be selectable. The user groups from allowedUserGroups shall be added also.
   allowedSubgroups =
 
-    # cat=plugin.tx_srfeuserregister_pi1/enable; type=string; label= Denied user groups: Comma separated list of user groups to be never selectable. These usegroups supersede the resulted user grous from allowedUserGroups and allowedSubgroups.
+    # cat=plugin.tx_srfeuserregister_pi1/enable; type=string; label= Denied user groups: Comma separated list of user groups to be never selectable. These user groups supersede the user groups resulting from allowedUserGroups and allowedSubgroups.
   deniedUserGroups =
 
     # cat=plugin.tx_srfeuserregister_pi1/enable; type=boolean; label= Keep unselectable user groups: If set then the user groups which the TYPO3 admin has assigned are not removed after editing.
